--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -1,4 +1,19 @@
 .Books {
     background: rgb(214, 174, 100);
     color: antiquewhite;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+
+}
+
+.Books nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    background: rgb(214, 174, 100);
+    color: antiquewhite;
 }
