--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -7,3 +7,11 @@
     width: 100%;
     background-color: #f5f5f5;
 }
+
+.Home nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    background-color: #f5f5f5;
+}
